--- a/src/views/campgrounds/edit.ejs
+++ b/src/views/campgrounds/edit.ejs
@@ -43,18 +43,28 @@
                 />
             </div>
             <label class="form-label mt-3" for="description">Description</label>
-            <textarea class="form-control" type="text" name="campground[description]" id="description">
+            <textarea
+                class="form-control"
+                type="text"
+                name="campground[description]"
+                id="description"
+            >
 <%= campground.description %></textarea
             >
             <div class="mt-3">
                 <label class="form-label" for="image">Add More Image(s)...</label>
                 <input class="form-control" type="file" name="image" multiple id="image" />
             </div>
-            <div class="mb-3">
+            <div class="my-3">
                 <% campground.images.forEach((img,i) => { %>
                 <img src="<%=img.thumbnail%>" class="img-thumbnail" alt="" />
                 <div class="form-check-inline">
-                    <input type="checkbox" id="image-<%=i%>" name="deleteImages" value="<%=img.filename%>" />
+                    <input
+                        type="checkbox"
+                        id="image-<%=i%>"
+                        name="deleteImages"
+                        value="<%=img.filename%>"
+                    />
                     <label for="image-<%=i%>">Delete?</label>
                 </div>
                 <% }) %>
