--- a/src/views/campgrounds/index.ejs
+++ b/src/views/campgrounds/index.ejs
@@ -1,10 +1,12 @@
 <% layout("./layouts/boilerplate") %>
 
-<div id="cluster-map"></div>
+<div class="shadow" id="cluster-map"></div>
 <div class="container">
-    <h1>All Campgrounds</h1>
+    <div class="my-5">
+        <h1>All Campgrounds</h1>
+    </div>
     <% campgrounds && campgrounds.forEach(camp => { %>
-    <div class="card mt-3">
+    <div class="card shadow my-5">
         <div class="row">
             <div class="col-md-4">
                 <% if (camp.images.length) { %>
@@ -24,7 +26,7 @@
                     <p class="card-text">
                         <small class="text-muted"><%= camp.location %></small>
                     </p>
-                    <a href="campgrounds/<%= camp.id %>" class="btn btn-primary"
+                    <a href="campgrounds/<%= camp.id %>" class="btn btn-secondary"
                         >View <%= camp.title %>
                     </a>
                 </div>
