--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -2,13 +2,8 @@
 
 <div class="container d-flex justify-content-center align-items-center mt-5">
     <div class="row">
-        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-            <div class="card shadow">
-                <img
-                    src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
-                    alt=""
-                    class="card-img-top"
-                />
+        <div class="col-md-6 mt-5" style="min-width: 400px !important">
+            <div class="card shadow mt-5">
                 <div class="card-body">
                     <h5 class="card-title">Login</h5>
                     <form action="/login" method="POST" class="validated-form" novalidate>
