--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,13 +1,8 @@
 <% layout('layouts/boilerplate')%>
 <div class="container d-flex justify-content-center align-items-center mt-5">
     <div class="row">
-        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+        <div class="col-md-6 mt-5" style="min-width: 400px !important">
             <div class="card shadow">
-                <img
-                    src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
-                    alt=""
-                    class="card-img-top"
-                />
                 <div class="card-body">
                     <h5 class="card-title">Register</h5>
                     <form action="/register" method="POST" class="validated-form" novalidate>
@@ -45,7 +40,9 @@
                             />
                             <div class="valid-feedback">Looks good!</div>
                         </div>
-                        <button class="btn btn-success btn-block">Register</button>
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-success">Register</button>
+                        </div>
                     </form>
                 </div>
             </div>
