--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -9,32 +9,22 @@
                     <form action="/login" method="POST" class="validated-form" novalidate>
                         <div class="mb-3">
                             <label class="form-label" for="username">Username</label>
-                            <input
-                                class="form-control"
-                                type="text"
-                                id="username"
-                                name="username"
-                                autofocus
-                                required
-                            />
+                            <input class="form-control" type="text" id="username" name="username" autofocus required />
                             <div class="valid-feedback">Looks good!</div>
                         </div>
 
                         <div class="mb-3">
                             <label class="form-label" for="password">Password</label>
-                            <input
-                                class="form-control"
-                                type="password"
-                                id="password"
-                                name="password"
-                                required
-                            />
+                            <input class="form-control" type="password" id="password" name="password" required />
                             <div class="valid-feedback">Looks good!</div>
                         </div>
                         <div class="d-grid gap-2">
                             <button class="btn btn-success">Login</button>
                         </div>
                     </form>
+                    <a href="/register" style="text-decoration: none; display: inline-block;">
+                        <h5 class="mt-3">Register</h5>
+                    </a>
                 </div>
             </div>
         </div>
